force-app/main/default/objects/Territory_Base_Sharing_Event__e/Territory_Base_Sharing_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event object for Territory-Base</description>
    <label>Territory-Base Sharing Event</label>
    <pluralLabel>Territory-Base Sharing Events</pluralLabel>
</CustomObject>