force-app/main/default/objects/Territory_Base_Sharing_Event__e/fields/Change_Context__c.field-meta.xml
<CustomField>
    <fullName>Change_Context__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The context of the sharing change. Eg: Owner,  Territory, Access Scope</description>
    <label>Change Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>