force-app/main/default/objects/Territory_Base_Sharing_Event__e/fields/Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Record_Ids__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Semi-colon delimited list of record ids in trigger scope for sharing

18-char for Id + delimiter supports up to 6898 Id values.</description>
    <label>Record Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>