force-app/main/default/objects/Territory_Base_Sharing_Event__e/fields/Trigger_Object__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Object__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>API Name of the Object triggering the sharing</description>
    <label>Trigger Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>